[gd_scene load_steps=10 format=3 uid="uid://do4xrnsbmd5os"]

[ext_resource type="PackedScene" uid="uid://bpy8mpw7u7nk8" path="res://PLAYER1scn.tscn" id="1_oornv"]
[ext_resource type="PackedScene" uid="uid://3s2wbtjjdq56" path="res://BALL.tscn" id="2_d7acc"]
[ext_resource type="PackedScene" uid="uid://qkitpay5wb2s" path="res://PLAYER2scn.tscn" id="3_pma5d"]
[ext_resource type="Script" uid="uid://d3cp261f8dx8g" path="res://score_manager.gd" id="4_glg8j"]
[ext_resource type="AudioStream" uid="uid://c4qee1mdyeudj" path="res://sound files/score_sound.mp3" id="5_w2bf4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oornv"]
size = Vector2(1152, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pma5d"]
size = Vector2(21, 664)

[sub_resource type="FontFile" id="FontFile_glg8j"]
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_w2bf4"]
font = SubResource("FontFile_glg8j")
font_size = 44

[node name="Node2D" type="Node2D"]

[node name="BACKGROUND" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="DIVIDER" type="ColorRect" parent="."]
offset_left = 568.0
offset_right = 584.0
offset_bottom = 648.0
color = Color(0.340339, 0.340339, 0.340339, 1)

[node name="WALLS" type="Node2D" parent="."]

[node name="Area2D" type="StaticBody2D" parent="WALLS"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/Area2D"]
position = Vector2(576, 4)
shape = SubResource("RectangleShape2D_oornv")

[node name="ColorRect" type="ColorRect" parent="WALLS/Area2D"]
offset_right = 1152.0
offset_bottom = 8.0

[node name="Area2D2" type="StaticBody2D" parent="WALLS"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/Area2D2"]
position = Vector2(576, 644)
shape = SubResource("RectangleShape2D_oornv")

[node name="ColorRect" type="ColorRect" parent="WALLS/Area2D2"]
offset_top = 640.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="CharacterBody2D" parent="." instance=ExtResource("1_oornv")]
position = Vector2(240, 280)

[node name="RigidBody2D" parent="." instance=ExtResource("2_d7acc")]
position = Vector2(408, 352)

[node name="CharacterBody2D2" parent="." instance=ExtResource("3_pma5d")]
position = Vector2(1016, 328)

[node name="PLAYER2_GOAL" type="Area2D" parent="."]

[node name="PLAYER2_GOAL" type="CollisionShape2D" parent="PLAYER2_GOAL"]
position = Vector2(1168, 328)
shape = SubResource("RectangleShape2D_pma5d")

[node name="PLAYER1_GOAL" type="Area2D" parent="."]

[node name="PLAYER1_GOAL" type="CollisionShape2D" parent="PLAYER1_GOAL"]
position = Vector2(-18.5, 324)
shape = SubResource("RectangleShape2D_pma5d")

[node name="SCORE_MANAGER" type="Node2D" parent="."]
script = ExtResource("4_glg8j")

[node name="Label" type="Label" parent="SCORE_MANAGER"]
offset_left = 442.0
offset_top = 45.0
offset_right = 482.0
offset_bottom = 106.0
text = "0"
label_settings = SubResource("LabelSettings_w2bf4")
horizontal_alignment = 1

[node name="player2_score_label" type="Label" parent="SCORE_MANAGER"]
offset_left = 662.0
offset_top = 45.0
offset_right = 702.0
offset_bottom = 106.0
text = "0"
label_settings = SubResource("LabelSettings_w2bf4")
horizontal_alignment = 1

[node name="score_sound" type="AudioStreamPlayer" parent="SCORE_MANAGER"]
stream = ExtResource("5_w2bf4")

[connection signal="body_entered" from="PLAYER2_GOAL" to="RigidBody2D" method="_on_player_2_goal_body_entered"]
[connection signal="body_entered" from="PLAYER2_GOAL" to="SCORE_MANAGER" method="_on_player_2_goal_body_entered"]
[connection signal="body_entered" from="PLAYER1_GOAL" to="RigidBody2D" method="_on_player_1_goal_body_entered"]
[connection signal="body_entered" from="PLAYER1_GOAL" to="SCORE_MANAGER" method="_on_player_1_goal_body_entered"]
